GC Dental/src/objects/Goal__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_line_items__c</fullName>
        <label>Count of line items</label>
        <summaryForeignKey>Goal_Line_Item__c.Goal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_From__c</fullName>
        <label>Goal From</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Executive or Manager to set the Goal.</errorMessage>
            <filterItems>
                <field>User.GC_User_Role__c</field>
                <operation>equals</operation>
                <value>Executive, Manager</value>
            </filterItems>
            <infoMessage>Select Manager or Executive to set the Goal.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales_Executive__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Sales_Executive__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Goal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>